--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/client/assets/logo.svg">
-    <link rel="stylesheet" href="/client/index.css">
+    <!-- CSS is imported in main.ts and bundled by Vite with cache-busting hash -->
 </head>
 <body>
     <!-- Join Space Modal -->
