Add text note (#28)
resolves #23

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                     <line x1="12" y1="17" x2="12" y2="21"/>
                 </svg>
             </button>
+            <button id="btn-note" class="control-btn" title="Add Note">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M12 20h9"></path>
+                    <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                </svg>
+            </button>
 
             <div class="control-divider"></div>
             <button id="btn-leave" class="control-btn control-btn-danger" title="Leave Space">
